--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@binance/connector-typescript": "^0.3.7",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "zod": "^3.23.8"
   }
 }
